2025-01-25  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.2.7

2025-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* inst/examples/toPOSIXctTiming.R: Moved from demo/
	* demo/00Index: Adjusted

	* README.md: Add r-universe badge

2024-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Correct missing link anchor
	* src/RcppExports.cpp: Regenerated
	* man/cToPOSIXct.Rd: Regenerated

2024-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2023-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/Makevars: No longer set CXX_STD
	* src/Makevars.win: Idem

2022-10-30  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.2.6

2022-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Add 'void' for proper prototypes pleasing clang-15

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-03-29  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.2.5

2022-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Switch to including RcppBDT.h to ensure
	consistent compilation settings across compilation units

2022-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Correct signature of one declaration
	* src/Makevars: Minor cleanup
	* src/Makevars.win: Idem

2021-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-08-15  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.2.4

	* DESCRIPTION: Removed two dated versioned Depends

	* src/toPOSIXct.cpp: Now uses Rcpp::Datetime and optional format